--- a/uni.scss
+++ b/uni.scss
@@ -75,3 +75,12 @@ $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle:36rpx;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:30rpx;
+
+
+
+
+h2{
+	padding:20px 13px!important;
+	box-sizing: border-box;
+	
+}
